--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -1,5 +1,10 @@
 <button
         type="button"
+        (click)="createBaseCard()"
+>Create card
+</button>
+<button
+        type="button"
         (click)="updateBaseCard()"
 >Update card
 </button>
